<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.pucminas.pjrrodriguessga.meuseventos.registerEvent"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nomeDoEvento"
            android:paddingBottom="10dp"
            android:hint="@string/nomeDoEvento"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dataDeInicio"
            android:paddingBottom="10dp"
            android:hint="@string/dataDoEventoIni"
            android:inputType="date"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:id="@+id/horarioDeInicio"
            android:hint="@string/horarioDoEventoIni"
            android:inputType="datetime"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:id="@+id/dataDeTermino"
            android:hint="@string/dataDoEventoFin"
            android:inputType="date"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:id="@+id/horarioDeTermino"
            android:hint="@string/horarioDoEventoFin"
            android:inputType="datetime"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:id="@+id/nomeDoOrga"
            android:hint="@string/nomeDoOrga"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:id="@+id/emailDoOrga"
            android:hint="@string/emailDoOrga"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:id="@+id/teleDoOrga"
            android:hint="@string/telefoneDoOrga"
            android:inputType="phone"

            />
        <Button
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerEvent"
            android:layout_gravity="center"
            android:text="@string/registerEvent"
            android:onClick="adicionarEvento"
            />
    </LinearLayout>

</ScrollView>
