<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.pucminas.pjrrodriguessga.meuseventos.registerEvent"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nomeDoCont"
            android:paddingBottom="10dp"
            android:hint="@string/nomeDoContato"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/teleDoContato"
            android:paddingBottom="10dp"
            android:hint="@string/teleDoContato"
            android:inputType="phone"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:id="@+id/emailDoContato"
            android:hint="@string/emailDoContato"
            android:inputType="textEmailAddress"
            />
        <Button
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registrarPessoa"
            android:layout_gravity="center"
            android:text="@string/registrarPessoa"
            android:onClick="adicionarPessoa"
            />
    </LinearLayout>

</ScrollView>
