<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nomeDoContato"
                            android:id="@+id/nomeDoCont"
                            android:layout_marginTop="10dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Title"
                            android:layout_marginBottom="2dp"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:text="@string/teleDoContato"
                            android:id="@+id/teleDoContato"
                            android:layout_marginBottom="2dp"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_marginBottom="10dp"
                            android:text="@string/emailDoContato"
                            android:id="@+id/emailDoContato"
                            />

                </LinearLayout>

                <LinearLayout
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"


                    >
                        <ImageButton
                            android:id="@+id/sendZap"
                            android:layout_gravity="center"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/ic_zap_zap"
                            />


                </LinearLayout>


        </LinearLayout>


</LinearLayout>